--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           aws cloudformation deploy \
             --stack-name MyEMRStack \
-            --template-file .github/workflows/Mycft.yaml \
+            --template-file .github/workflows/mycft.yaml \
             --capabilities CAPABILITY_IAM
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
